# tone-lang

./: .clang-format  .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/examples/tokenize_repl/: main.cpp
core/include/tone/: core.hpp
core/include/tone/core/: character.hpp  errors.hpp  lookup.hpp  lookup.inl  tokenize.hpp
core/src/tone/: core.cpp
core/src/tone/core/: errors.cpp  tokenize.cpp  tokens.cpp
libs/core/: CMakeLists.txt
libs/core/examples/: CMakeLists.txt
libs/core/examples/expression_repl/: CMakeLists.txt  main.cpp
libs/core/examples/tokenize_repl/: CMakeLists.txt  main.cpp
libs/core/include/tone/core/: character.hpp  compile_context.hpp  conversion_rules.hpp  errors.hpp  expression_parser.hpp  expression_tree.hpp  identifier.hpp  lookup.hpp  lookup.inl  push_back_stream.hpp  tokenize.hpp  tokenizer.hpp  tokens.hpp  type.hpp  variant_helpers.hpp
libs/core/src/tone/core/: compile_context.cpp  conversion_rules.cpp  errors.cpp  expression_parser.cpp  expression_tree.cpp  identifier.cpp  push_back_stream.cpp  tokenize.cpp  tokenizer.cpp  tokens.cpp  type.cpp
